# telegram-shikimori-bot

./: .gitignore  Dockerfile  README.md  bot.py  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  websocket.py
Keyboard/: __init__.py  inline.py  keyboard.py  reply.py
Keyboard/anilibria/: inline.py
Keyboard/shikimori/: inline.py
database/: animedb.py  database.py
database/dto/: animes.py  api_client.py  base.py  user.py
database/repositories/: anilibria.py  shikimori.py
database/schemas/: animes.py  base.py  error.py  user.py
handlers/: __init__.py  helpful_functions.py  main.py  oauth.py  shikimori_anime_handlers.py  shikimori_handlers.py  states.py  translator.py  validation.py
handlers/Anilibria/: anilibria_handlers.py  anime_functions.py  callbacks.py  handlers.py  helpful_functions.py  main.py  notifications.py  other_functional.py  states.py
handlers/Anilibria/handlers/: callbacks.py  handlers.py
handlers/Anilibria/keyboards/: __init__.py  inline.py
handlers/Anilibria/utils/: helpful_functions.py  message.py  notifications.py  states.py
handlers/Shikimori/: callbacks.py  handlers.py  helpful_functions.py  main.py  oauth.py  profile_callbacks.py  shikimori_anime.py  shikimori_handlers.py  shikimori_profile.py  shikimori_requests.py  states.py  validation.py
handlers/Shikimori/handlers/: callbacks.py  handlers.py
handlers/Shikimori/oauth/: oauth.py
handlers/admin/: callbacks.py  handlers.py  main.py  states.py
misc/: .env_example  __init__.py  constants.py
utils/: message.py
(+6 files in other folders)
